Updating GitHub link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="https://x.com/TxEdInfo" target="_blank" style="text-decoration: none; margin-right: 8px;">
             <img src="logo-black.png" alt="X.com" width="16" height="16">
         </a>
-        <a href="https://github.com/txedinfo" target="_blank" style="text-decoration: none;">
+        <a href="https://github.com/txedinfo/SPEDFundingGap" target="_blank" style="text-decoration: none;">
             <img src="GitHub_Logo.png" alt="github.com" height="16">
         </a>
     </div>
