Fixing charts aspect ratio adjustment

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         }
 
         // Create a canvas for the chart and a download button
-        chartContainer.innerHTML = '<canvas id="' + tableId + '-chart" style="height:400px; max-height:400px;"></canvas><br><button id="' + tableId + '-download">Download Chart</button>';            const ctx = document.getElementById(tableId + '-chart').getContext('2d');
+        chartContainer.innerHTML = '<canvas id="' + tableId + '-chart" style="max-height:400px; min-height: 400px;"></canvas><br><button id="' + tableId + '-download">Download Chart</button>';            const ctx = document.getElementById(tableId + '-chart').getContext('2d');
 
         function updateChart() {
             let currentData = dt.rows({ page: 'current' }).data().toArray();
@@ -244,7 +244,7 @@
                     ]
                 },
                 options: {
-                    maintainAspectRatio: true,
+                    maintainAspectRatio: false,
                     animation: {
                         duration: 1000,
                         easing: 'easeOutQuart'
