Updating summary stats

--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
 <ul class="summary-stats">
     <li><strong>Districts</strong>
       <ul>
-        <li>With surplus: 559 (54.8%)</li>
         <li>With deficit: 461 (45.2%)</li>
+        <li>No deficit: 559 (54.8%)</li>
         <li>Net Funding Gap: -$2,097,835,306</li>
       </ul>
     </li>
     <br/>
     <li><strong>Charters</strong>
       <ul>
-        <li>With surplus: 113 (60.4%)</li>
         <li>With deficit: 74 (39.6%)</li>
+        <li>No deficit: 113 (60.4%)</li>
         <li>Net Funding Gap: -$56,426,092</li>
       </ul>
     </li>
